--- a/ldms/scripts/examples/sequence_unsupp.4
+++ b/ldms/scripts/examples/sequence_unsupp.4
@@ -4,7 +4,7 @@ start name=${sampler} interval=1000000
 
 load name=store_csv
 config name=store_csv action=init path=${STOREDIR} altheader=0 container=node7
-config name=store_csv action=custom schema=${sampler} policy=${sampler} path=${STOREDIR} altheader=1 container=node8
+config name=store_csv action=custom schema=${sampler} path=${STOREDIR} altheader=1 container=node8
 
 prdcr_add name=localhost1 host=localhost type=active xprt=${XPRT} port=${port1} interval=2000000
 prdcr_start name=localhost1
